tests/fixtures/invalid/divmod_str_float.py
# Cannot call divmod() with Str, Float
x = divmod("hello", 1.0)
